modificação da aula e css

--- a/tabela.html
+++ b/tabela.html
@@ -5,45 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trabalhando com tabelas</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <h2>Tabelas html</h2>
-    <table border="4">
-        <thead>
-        <tr>
-            <th colspan="3">Agenda Telefônica</th>
-        </tr>
-        <tr>
-            <th>Aluno:</th>
-            <th>Pais:</th>
-            <th>Telefone:</th>
-        </tr>
-        </thead>
-        <tbody>
-            <tr>
-            <td rowspan="2">Caio Bruno</td>
-            <td>Alessandro</td>
-            <td>(86)9499-0999</td>
-        </tr>
-        <tr>
-            <td>Andreina</td>
-            <td>(86)9532-8976</td>
-        </tr>
-        <tr>
-            <td rowspan="2">Guilherme Brito</td>
-            <td>Marcos</td>
-            <td>(86)9689-7867</td>
-        </tr>
-        <tr>
-            <td>Vanessa</td>
-            <td>(86)9878-9018</td>
-        </tr>
-        </tbody>
-        <tfoot>
-            <tr>
-                <td colspan="3">Fonte: Cadastro</td>
-            </tr>
-        </tfoot>
-    </table>
+    <div class="div1">
+         <table>
+            <thead>
+                <tr>
+                    <th colspan="3">Agenda Telefônica</th>
+                </tr>
+                <tr>
+                    <th>Aluno:</th>
+                    <th>Pais:</th>
+                    <th>Telefone:</th>
+                </tr>
+            </thead>
+            <tbody>
+                    <tr>
+                    <td rowspan="2">Caio Bruno</td>
+                    <td>Alessandro</td>
+                    <td>(86)9499-0999</td>
+                </tr>
+                <tr>
+                    <td>Andreina</td>
+                    <td>(86)9532-8976</td>
+                </tr>
+                <tr>
+                    <td rowspan="2">Guilherme</td>
+                    <td>Marcos</td>
+                    <td>(86)9689-7867</td>
+                </tr>
+                <tr>
+                    <td>Vanessa</td>
+                    <td>(86)9878-9018</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                    <tr>
+                        <td colspan="3">Fonte: Cadastro</td>
+                    </tr>
+            </tfoot>
+        </table>
+    </div>
 </body>
 </html>
