--- a/home.html
+++ b/home.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/nsq.css">
+    <link rel="stylesheet" href="assets/fontawesome/css/fontawesome.css">
 </head>
     <body>
         <h1></h1>
         <table>
             <thead>
             <tr>
-                <th colspan="3">Preços com promoção</th>
+                <th colspan="3"><i class="fa-solid fa-dollar-sign fa-spin"></i>Preços com promoção<i class="fa-solid fa-dollar-sign fa-spin"></i></th>
             </tr>
             <tr>
                 <th>Dark Souls</th>
