--- a/home.html
+++ b/home.html
@@ -27,5 +27,55 @@
             </tr>
             </thead>
         </table>
+        <footer>
+
+
+    <div class="rule"></div>
+    <div id="footer_logo_steam"><img src="https://store.akamai.steamstatic.com/public/images/v6/logo_steam_footer.png" alt="Valve Software" border="0"></div>
+
+<div id="footer_logo"><a href="http://www.valvesoftware.com" target="_blank" rel=""><img src="https://store.akamai.steamstatic.com/public/images/footerLogo_valve_new.png" alt="Valve Software" border="0"></a></div>
+<div id="footer_text" data-panel="{&quot;flow-children&quot;:&quot;row&quot;}">
+<div>© 2023 Valve Corporation. Todos os direitos reservados. Todas as marcas são propriedade dos seus respectivos donos nos EUA e em outros países.</div>
+<div>IVA incluso em todos os preços onde aplicável.&nbsp;&nbsp;
+
+<a href="https://store.steampowered.com/privacy_agreement/?snr=1_44_44_" target="_blank" rel="">Política de Privacidade</a>
+&nbsp; | &nbsp;
+<a href="https://store.steampowered.com/legal/?snr=1_44_44_" target="_blank" rel="">Termos Legais</a>
+&nbsp; | &nbsp;
+<a href="https://store.steampowered.com/subscriber_agreement/?snr=1_44_44_" target="_blank" rel="">Acordo de Assinatura do Steam</a>
+&nbsp; | &nbsp;
+<a href="https://store.steampowered.com/steam_refunds/?snr=1_44_44_" target="_blank" rel="">Reembolsos</a>
+&nbsp; | &nbsp;
+<a href="https://store.steampowered.com/account/cookiepreferences/?snr=1_44_44_" target="_blank" rel="">Cookies</a>
+
+</div>
+        <div class="responsive_optin_link">
+    <div class="btn_medium btnv6_grey_black" onclick="Responsive_RequestMobileView()">
+        <span>Ver versão para dispositivos móveis</span>
+    </div>
+</div>
+
+</div>
+
+
+
+<div style="clear: left;"></div>
+<br>
+
+<div class="rule"></div>
+
+<div class="valve_links" data-panel="{&quot;flow-children&quot;:&quot;row&quot;}">
+<a href="http://www.valvesoftware.com/about" target="_blank" rel="">Sobre a Valve</a>
+&nbsp; | &nbsp;<a href="http://www.valvesoftware.com" target="_blank" rel="">Empregos</a>
+&nbsp; | &nbsp;<a href="http://www.steampowered.com/steamworks/" target="_blank" rel="">Steamworks</a>
+&nbsp; | &nbsp;<a href="https://partner.steamgames.com/steamdirect" target="_blank" rel="">Distribuição no Steam</a>
+&nbsp; | &nbsp;<a href="https://help.steampowered.com/pt-br/?snr=1_44_44_">Suporte</a>
+                    &nbsp; | &nbsp;<a href="https://store.steampowered.com/digitalgiftcards/?snr=1_44_44_" target="_blank" rel="">Vales-presente</a>
+&nbsp; | &nbsp;<a href="https://steamcommunity.com/linkfilter/?url=http://www.facebook.com/Steam" target="_blank" rel=" noopener"><img src="https://store.akamai.steamstatic.com/public/images/ico/ico_facebook.gif"> Steam</a>
+&nbsp; | &nbsp;<a href="http://twitter.com/steam" target="_blank" rel=""><img src="https://store.akamai.steamstatic.com/public/images/ico/ico_twitter.gif"> @steam</a>
+</div>
+
+
+        </footer>
     </body>
 </html>
