--- a/petshop.html
+++ b/petshop.html
@@ -16,7 +16,14 @@
         margin: 0;
         padding: 0;
     }
-    
+    footer{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 100px;    
+    text-align: center;
+    line-height: 100px;
+    }
     a{
         text-decoration: none;
     }
@@ -97,5 +104,3 @@
     </footer>
 </body>
 </html>
-
-        
