--- a/petshop.html
+++ b/petshop.html
@@ -17,18 +17,19 @@
         padding: 0;
     }
     footer{
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 100px;    
-    text-align: center;
-    line-height: 100px;
+        position: fixed;
+        bottom: 0;
+        left: 0%;
+        bottom: 0%;
+        width: 100%;
+        line-height: 30px;
+        text-align: center;
+        padding: 0;
     }
     a{
         text-decoration: none;
     }
-    
-    ul{
+    .ul1{
         padding: 0;
         border: 2px;
         border-style: solid;
@@ -39,19 +40,22 @@
         padding: 0.30em;
     }
     tr, td, th{
-        margin-left: auto;   
+        margin-left: auto;
     }
     td{
-        padding: 30px;
+        padding: 13px;
     }
     span{
         display: inline;
+    }
+    table{
+        margin: auto;
     }
 </style>
 <img src="https://media.istockphoto.com/id/892381986/pt/vetorial/pet-shop-sign-with-cute-dog-and-cat.jpg?s=612x612&w=0&k=20&c=_zQ0BisRbH538TlL8NFKyoRlwRJbxJxEbpnqIonPnko=" alt="" width="200" style="display: grid; margin: auto;">
 <body style="font-size: 1em; width: 500px; margin: auto;">
 <header>    
-    <ul style="list-style: none;">
+    <ul style="list-style: none;" class="ul1">
         <li><a href="#">Home<i style="padding: 3px;" class="fa-solid fa-house"></i></li></a>
 
         <li><a href="#">Adoção<i style="padding: 3px;" class="fa-solid fa-bag-shopping"></i></li></a>
@@ -65,7 +69,7 @@
         </div>
     </ul>
 </header>
-<table style="margin: auto;">
+<table>
     <thead>
         <tr>
             <th>Reecreação</th>
@@ -98,7 +102,7 @@
         </div>
 
             <li><a class="text-body-secondary" href="#"><i class="fa-brands fa-twitter"></i></li></a>
-            <li><a class="text-body-secondary" href="#"><i class="fa-brands fa-instagram"></i></li></a>
+            <li><a class="text-body-secondary" href="https://github.com/Sagrob"><i class="fa-brands fa-instagram"></i></li></a>
             <li><a class="text-body-secondary" href="#"><i class="fa-brands fa-whatsapp"></i></li></a>
         </ul> 
     </footer>
