--- a/page.html
+++ b/page.html
@@ -10,8 +10,9 @@
 </head>
 <body>
 
-    
     <embed src="assets/img/" loop="true" autostart="true" width="2" height="0">
+
+    <a href=""><img src="" alt="" style="width: 100px; height: 100px;" class="center"><a>
 
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
         <div class="col-md-4 d-flex align-items-center">
