--- a/page.html
+++ b/page.html
@@ -10,9 +10,17 @@
 </head>
 <body>
 
-    <embed src="assets/img/" loop="true" autostart="true" width="2" height="0">
+    <h1>Celeste</h1>
 
-    <a href=""><img src="" alt="" style="width: 100px; height: 100px;" class="center"><a>
+    <div>
+    <embed src="assets/img/" loop="true" autostart="true" width="2" height="0">
+    </div>
+
+    <div style="text-align: center;">
+    <a href=""><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/42/Celeste_character_Madeline.png/800px-Celeste_character_Madeline.png" alt="" width="200" height="250"><a>
+    <a href=""><img src="assets/img/CelesteLogo.webp" alt="" width="300" height="300"></a>
+    <a href=""><img src="assets/img/Badeline.webp" alt="" width="200" height="250"></a>
+    </div>
 
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
         <div class="col-md-4 d-flex align-items-center">
